--- a/FixItRight_API/appsettings.json
+++ b/FixItRight_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbString": "Server=(local);uid=sa;pwd=12345;database=FixItRight;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
