Add logging service

--- a/FixItRight_API/appsettings.json
+++ b/FixItRight_API/appsettings.json
@@ -8,5 +8,30 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbString": "Server=(local);uid=sa;pwd=12345;database=FixItRight;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u11}] {Message:lj}{NewLine}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "Path": "logs/log-.txt",
+          "RollingInterval": "Day",
+          "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u11}] {Message:lj}{NewLine}"
+        }
+      }
+    ]
   }
 }
