--- a/FixItRight_Service/FixItRight_Service.csproj
+++ b/FixItRight_Service/FixItRight_Service.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FixItRight_Domain\FixItRight_Domain.csproj" />
   </ItemGroup>
 
