Add global exception handler

--- a/FixItRight_Service/FixItRight_Service.csproj
+++ b/FixItRight_Service/FixItRight_Service.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\FixItRight_Domain\FixItRight_Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UserServices\" />
+  </ItemGroup>
+
 </Project>
