Finish register for customer and mechanist

--- a/FixItRight_API/appsettings.json
+++ b/FixItRight_API/appsettings.json
@@ -33,5 +33,11 @@
         }
       }
     ]
+  },
+  "JwtSettings": {
+    "validIssuer": "https://localhost:7231",
+    "validAudience": "https://localhost:7231",
+    "secretKey": "This is made by Nguyen Le Tan Nghiep for EXE201",
+    "expires": 30
   }
 }
