Add VnPay to transaction

--- a/FixItRight_Service/FixItRight_Service.csproj
+++ b/FixItRight_Service/FixItRight_Service.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\FixItRight_Domain\FixItRight_Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ChatServices\" />
+  </ItemGroup>
+
 </Project>
