--- a/FixItRight_Service/FixItRight_Service.csproj
+++ b/FixItRight_Service/FixItRight_Service.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
@@ -18,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FixItRight_Domain\FixItRight_Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ChatServices\" />
   </ItemGroup>
 
 </Project>
