--- a/FixItRight_API/appsettings.json
+++ b/FixItRight_API/appsettings.json
@@ -14,8 +14,7 @@
   },
   "KeyVaultUrl": "https://fixitright.vault.azure.net/",
   "VNPay": {
-    "ReturnUrlWeb": "",
-    "ReturnUrlMobile": "https://fix-it-right.vercel.app/",
+    "ReturnUrlMobile": "https://fix-it-right.vercel.app/login/",
     "IPNUrl": "https://fixitright.azurewebsites.net/api/transactions/ipn",
     "TmnCode": "4EASHO23",
     "HashSecret": "34KJEN0IQPWMWUT45CU8ETQXJ51P1TR5",
